; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/hyperv/netvsc/extr_if_hn.c_hn_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/hyperv/netvsc/extr_if_hn.c_hn_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hn_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @hn_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hn_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.hn_softc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.hn_softc*
  store %struct.hn_softc* %5, %struct.hn_softc** %3, align 8
  %6 = load %struct.hn_softc*, %struct.hn_softc** %3, align 8
  %7 = call i32 @HN_LOCK(%struct.hn_softc* %6)
  %8 = load %struct.hn_softc*, %struct.hn_softc** %3, align 8
  %9 = call i32 @hn_init_locked(%struct.hn_softc* %8)
  %10 = load %struct.hn_softc*, %struct.hn_softc** %3, align 8
  %11 = call i32 @HN_UNLOCK(%struct.hn_softc* %10)
  ret void
}

declare dso_local i32 @HN_LOCK(%struct.hn_softc*) #1

declare dso_local i32 @hn_init_locked(%struct.hn_softc*) #1

declare dso_local i32 @HN_UNLOCK(%struct.hn_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
